fixed petra station alignment for header

--- a/catacol.css
+++ b/catacol.css
@@ -2,13 +2,11 @@
 	box-sizing: border-box;
 }
 html {
-	 font-family: 'Oswald', sans-serif;
-   font-size: 
- 
+	 font-family: 'Oswald', sans-serif; 
 }
 body {
   background-color: rgba(255, 255, 255, 1);
-  background-img: url('https://64.media.tumblr.com/02f88783761e227f1550305fae008c2d/c1bad22d6eaeacba-ac/s1280x1920/1a6e718510d17331369cc506e88969a6b3dd7c5b.jpg');
+  /* background: url('https://64.media.tumblr.com/02f88783761e227f1550305fae008c2d/c1bad22d6eaeacba-ac/s1280x1920/1a6e718510d17331369cc506e88969a6b3dd7c5b.jpg'); */
   background-repeat: no-repeat;
 
   background-size: cover;
@@ -22,10 +20,7 @@ body {
   height: auto;
   top: 1rem;
   z-index: 999;
-
   float: right;
-  /* display: inline-block; */
-  /* position: fixed; */
   
   
 }
@@ -69,8 +64,8 @@ nav li a:hover {
 }
 
 header h1 {
-  width: 41%;
-  height: 67%;
+  width: 36%;
+  height: 75%;
   padding: 0rem 0rem 0.5rem 0rem; 
   margin: 1rem 0rem 0rem 0rem;
   position: fixed;
@@ -89,7 +84,6 @@ header h4 {
 	text-align: center;
 	display: inline-block;
   width: 50%;
-	float: center;
 	max-width: 100%;
 	font-size: 2rem;
 	margin: auto;
@@ -131,7 +125,6 @@ ul a {
 	display: inline-block;
 	width: 100%;
 	height: auto;
-	float: center ;
   top: 5rem;
 
 
@@ -152,7 +145,6 @@ footer .footer {
   width: 90%;
   height: auto;
   display: inline-block;
-  float: bottom;
   text-align: center;
   margin: auto;
   color: #ffffff;
@@ -176,7 +168,6 @@ footer li {
 	text-align: center;
 	color: #ffffff;
 	margin: 0 0 0 0;
-	float: center; 
 	overflow: visible;
 	
 	
